--- a/basit-web-sitesi(html-css)/index.css
+++ b/basit-web-sitesi(html-css)/index.css
@@ -58,10 +58,10 @@ header .navbar a:hover {
 
 header .icons div {
     width: 4.5rem;
-    height: 3.5rem;
+    height: 4.5rem;
     line-height: 4.5rem;
-    background-color: rgb(124, 44, 44);
-    color: rgb(197, 118, 118);
+    background-color: white;
+    color: black;
     font-size: 20px;
     text-align: center;
     border-radius: 5px;
