--- a/basit-web-sitesi(html-css)/index.css
+++ b/basit-web-sitesi(html-css)/index.css
@@ -12,7 +12,7 @@ html {
     overflow: hidden;
 }
 
-.banner { 
+.backround { 
     background-image: url("/basit-web-sitesi(html-css)/images/3205765.jpg");
     width: 100%;
     height: 100vh;
